--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,22 @@
+spring.config.import=optional:file:.env[.properties]
 spring.application.name=curricularizacao
 
-jwt.secret=Ch4v3Sup3rM3g4Gr4nd3S3gur41nqu3br4v3lD4Curr2cul4r1z4c40
+jwt.secret=${JWT_SECRET_KEY:default-secret-key}
 jwt.expiration=3600000
 
+# Configurações de conexão com o banco de dados
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
-spring.datasource.password=123
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=validate
+spring.datasource.password=
+
+# Configurações do JPA e Hibernate
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Configurações de upload de arquivo (Multipart)
+spring.servlet.multipart.enabled=true
+# Define o tamanho máximo para CADA arquivo
+spring.servlet.multipart.max-file-size=50MB
+# Define o tamanho máximo para a REQUISIÇÃO completa (dados + arquivo)
+spring.servlet.multipart.max-request-size=50MB
