--- a/pom.xml
+++ b/pom.xml
@@ -91,7 +91,9 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <optional>true</optional>
+			<version>1.18.38</version>
+			<scope>provide</scope>
+			<optional>true</optional>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -119,6 +121,8 @@
 						<path>
 							<groupId>org.projectlombok</groupId>
 							<artifactId>lombok</artifactId>
+							<version>1.18.38</version>
+							<scope>provide</scope>
 						</path>
 					</annotationProcessorPaths>
 				</configuration>
@@ -131,6 +135,8 @@
 						<exclude>
 							<groupId>org.projectlombok</groupId>
 							<artifactId>lombok</artifactId>
+							<version>1.18.38</version>
+							<scope>provide</scope>
 						</exclude>
 					</excludes>
 				</configuration>
