--- a/pom.xml
+++ b/pom.xml
@@ -125,7 +125,9 @@
 							<scope>provide</scope>
 						</path>
 					</annotationProcessorPaths>
-				</configuration>
+                    <source>9</source>
+                    <target>9</target>
+                </configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
